--- a/template/index.ejs
+++ b/template/index.ejs
@@ -22,5 +22,6 @@
 <body>
 	<svg id="test">
 	</svg>
+	<button style="position: absolute; left: 10px; top: 10px" id="add">添加弹幕</button>
 </body>
 </html>
